--- a/app/templates/rating.html
+++ b/app/templates/rating.html
@@ -23,7 +23,7 @@
   </header>
   
   <main class="container rating-container">
-    <section class="leaderboard new_block card">
+    <section class="leaderboard wide-block new_block card">
       <div class="card-head">
         <div class="section-title">РЕЙТИНГ ИГРОКОВ</div>
       </div>
