--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -39,7 +39,7 @@
                 <h1 class="about-title">RatingHabits</h1>
                 <p class="about-subtitle">Трекер привычек с системой рейтинга</p>
             </div>
-            <div class="about-logo">
+            <div class="about-logo" id="about-logo-2">
                 <img src="{{ url_for('static', filename='images/logo2.png') }}" alt="RatingHabits Logo" />
             </div>
 
